2016-06-08 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/channel.py: addSample() would use the index of the last sample to
	check systematics, even if you specified an index. Now fixed. 

2016-06-03 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/configMgr.cxx: add stop condition for UL range extending at 5x
	points; change the error messages about min_CLs and max_CLs to reflect
	what they actually check (which is not the 1st and last but _any_ point)

2016-06-03 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/histogramsManager.py: add Logger. Also clearer error if input for user-defined
	systematic is wrong and the user probably meant to use a tree

2016-06-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/ConfigMgr.cxx: add mechanism to keep extending UL range if running
	in asymptotic mode. Will keep added points and merging
	HypoTestInverterResult until +2sigma band < 0.05 and the UL <0.9x the scan
	range. Also store the plot as pdf and png.
	* src/StatTools.cxx: roll back previous changes

2016-06-01 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/StatTools.cxx: add mechanism to keep extending UL range if running
	asymptotic, until +2 sigma band is below 0.05

2016-06-01 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/YieldsTable.py: use the logger class for better output
	* scripts/YieldsTableTex.py: use the logger class for better output

2016-06-01 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* analysis/tutorial/MySimpleChannelConfig.py: set the default normfactor
	to 1 and not 0.5 - or YieldsTable.py complains and confuses users! 

2016-06-01 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/fitConfig.py: renamed set*Channel() methods. They did not really
	set but append. Now called add*Channel() method.

2016-06-01 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/configManager.py: split initialize() method in to sub methods to
	make it easier to read and maintain