@@ -1,3 +1,9 @@
+2016-06-09 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
+	* scripts/HistFitter.py: add model-dep and model-indep fit types as
+	aliases of excl and disc
+	* scripts/HistFitter.py: detect whether the input file exists and is a
+	file _before_ calling execFile
+
 2016-06-08 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
 	* python/channel.py: addSample() would use the index of the last sample to
 	check systematics, even if you specified an index. Now fixed. 
